<resources>
    <string name="app_name">Doctor App</string>
    <string name="action_settings">Settings</string>
    <string name="my_inventory">My Inventory</string>
    <string name="consultations">Consultations</string>
    <string name="analytics">Analytics</string>
    <string name="more">More</string>
    <string name="vaccine_search_hint">Vaccine Name</string>
    <string name="inventory_consumed">Consumed</string>
    <string name="inventory_available">Available</string>
    <string name="inventory_reserve">Reserve</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="my_inventory_no_items">No Items</string>
    <string name="cross_symbol">\u00D7</string>
    <string name="temperature">Administering Vaccine at Temp {temp}</string>
    <string name="todays">Todays</string>
    <string name="upcoming">Upcoming</string>
    <string name="missed">Missed</string>
    <string name="administered">Administered</string>
    <string name="noAppointments">No Appointments Booked</string>
    <string name="atClinic">At Clinic</string>
    <string name="atHome">At Home</string>
    <string name="patientName">Patient Name</string>
    <string name="hintChildDHCode">Enter Dh Code of Child</string>
    <string name="textOR">OR</string>
    <string name="hintChildName">Name of the Child</string>
    <string name="child">Child</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="timeOfBirth">Time Of Birth</string>
    <string name="parent">Parent</string>
    <string name="guardian">Guardian</string>
    <string name="hintName">Name</string>
    <string name="hintEmail">Email</string>
    <string name="textAdd">Add</string>
    <string name="available_inventory">Available Inventory</string>
    <string name="vaccinate">Vaccinate</string>
    <string name="hintPatientName">Patient Name</string>
    <string name="inventory">Inventory</string>
    <string name="dialog_message_done">Done</string>
    <string name="dialogDeleteConsultation">Are you Sure?\nYou want to cancel todays appointment.</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="textMissed">Missed</string>
    <string name="textAdministered">Administered</string>
    <string name="icon_facebook">\u0021</string>
    <string name="icon_google_plus">\u0022</string>
    <string name="icon_linkedin">\u0023</string>
    <string name="icon_check_mark_solid">\u002A</string>
    <string name="icon_my_inventory">\u007E</string>
    <string name="icon_consultation">\u0039</string>
    <string name="icon_analytics">\u0070</string>
    <string name="icon_more">\u0046</string>
    <string name="icon_notification">\u0030</string>
    <string name="icon_cart">\u0069</string>
    <string name="icon_search">\u0052</string>
    <string name="icon_money">\u003C</string>
    <string name="icon_down_arrow">\u0073</string>
    <string name="icon_add_to_cart">\u006A</string>
    <string name="icon_close">\u0045</string>
    <string name="icon_image">\u003E</string>
    <string name="icon_vial">\u0068</string>
    <string name="icon_dustbin">\u0050</string>
    <string name="icon_dollor">\u003C</string>
    <string name="icon_add_items">\u002C</string>
    <string name="icon_vaccine">\u007E</string>
    <string name="icon_rupee">\u006B</string>
    <string name="icon_location">\u003A</string>
    <string name="icon_check_mark_stroke">\u004F</string>
    <string name="icon_dollar">\u003C</string>
    <string name="icon_add_consultation">\u002C</string>
    <string name="icon_profile_pic">\u002B</string>
    <string name="icon_delete_consultation">\u0045</string>
    <string name="icon_home">\u0036</string>
    <string name="icon_clinic">\u0037</string>
    <string name="icon_calendar">\u007D</string>
    <string name="rupeeSymbol">\u20B9</string>
    <string name="hintPassword">Password</string>
    <string name="Forgot_Password"><u>Forgot Password?</u></string>
    <string name="LoginUsing">Or Login Using</string>
    <string name="txtFacebook">Facebook</string>
    <string name="hintEmailOrMobile">Email | Mobile No.</string>
    <string name="txtGooglePlus">Google+</string>
    <string name="txtLinkedIn">Linkedin</string>
    <string name="Name">Name</string>
    <string name="Mobile">Mobile</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="VerifyOTP"><u>Verify OTP</u></string>
    <string name="Resend"><u>Resend</u></string>
    <string name="resetPasswordText">Please enter your registered E-mail-ID for a password reset link.</string>
    <string name="submit">Submit</string>
    <string name="Thank_you">Thank you for your request.\nA password reset link has been sent to your email address.</string>
    <string name="OK">Ok</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="EnterEmail">Please enter your Email ID</string>
    <string name="EnterValidEmail">Please enter valid Email ID</string>
    <string name="EnterPassword">Please enter your password</string>
    <string name="EnterName">Please enter your Name</string>
    <string name="EnterMobile">Please enter your Mobile Number</string>
    <string name="EnterValidMobile">Please enter valid Mobile Number</string>
    <string name="PasswordValidation">Password should be in minimum 8 characters</string>
    <string name="cart_button">Place Order</string>
    <string name="custom_dialog_no">No</string>
    <string name="custom_dialog_yes">Yes</string>
    <string name="order_summary_button">Confirm Order</string>
    <string name="payment_option_button">S</string>
    <string name="rupee">T</string>
    <string name="cart_place_order_button">Place Order</string>
    <string name="change_address_button">Ok</string>
    <string name="confirm_order">has been placed successfully</string>
    <string name="change_address">Change Shipping Address</string>
    <string name="total_items">Total Items</string>
    <string name="total">Total</string>
    <string name="discount">Discount</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="vat_cst">VAT/CST</string>
    <string name="grand_total">Grand Total</string>
    <string name="total_ordered_vaccines">Total Vaccines Ordered</string>
    <string name="order_details">Order Details</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="order_status">Order Status</string>
    <string name="edit"><u>Edit</u></string>
    <string name="cart_you_pay">You Pay</string>
    <string name="payment_options">Payment Options</string>
    <string name="orange_wallet">Orange Wallet</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="cart_empty">Your Cart is Empty</string>
    <string name="cart_title">Cart</string>
    <string name="cash_on_delivery_title">Cash On Delivery</string>
    <string name="order_summary_title">Order Summary</string>
    <string name="payment_options_title">Payment Options</string>
    <string name="qty">Qty : </string>
    <string name="enter_coupon_code_hint">Enter Coupon code </string>
    <string name="deleteCartmessage">Are You Sure ?\nYou want to remove vaccine from cart.</string>
    <string name="placedOrder_id_message">Order ID : {OrderID}\nhas been placed successfully.</string>
    <string name="order_summary_itemlist">My Address</string>
    <string name="textDone">Done</string>
    <string name="icon_vacc">\u004c</string>
    <string name="notify_order">Orders Notifications</string>
    <string name="notify_security">Security Notifications</string>
    <string name="notify_Transaction">Transaction Notifications</string>
    <string name="notify_Vachub">Vachub Notifications</string>
    <string name="notify_Reminder">Reminder Notifications</string>
    <string name="notify_Promotional">Promotional Notifications</string>
    <string name="balance_wallet">Wallet Balance:</string>
    <string name="hint_amount">Amount</string>
    <string name="Orange_points">Orange Points</string>
    <string name="Money_add">Add money</string>
    <string name="coupon">Coupons</string>
    <string name="buttonwallet">Redeem</string>
    <string name="card_save">Saved card</string>
    <string name="card_add">Add Card</string>
    <string name="Add_wallet">Add</string>
    <string name="hint_orangecode">Enter orange code</string>
    <string name="offers">Available offers</string>
    <string name="code">GET CODE</string>
    <string name="Exp_date">Expiry Date</string>
    <string name="Cards">We accept Debit and Credit cards</string>
    <string name="hint_card_name">Name on the card</string>
    <string name="hint_month">MM</string>
    <string name="hint_year">YYYY</string>
    <string name="icon_coin">\u003c</string>
    <string name="icon_card">\u0062</string>
    <string name="icon_delete">\u0050</string>
    <string name="icon_apply">\u004f</string>
    <string name="Image_icon">\u003E</string>
    <string name="Viewicon">\u0046</string>
    <string name="Plusicon">\u005A</string>
    <string name="icon_thumb">\u003B</string>
    <string name="icon_hospital">\u0055</string>
    <string name="icon_tickmark">\u004F</string>
    <string name="icon_foradd_image">\u002D</string>
    <string name="icon_noimage">\u002B</string>
    <string name="icon_view">\u0073</string>
    <string name="icon_rightmark">\u004F</string>
    <string name="clinicNameValidation">Enter Clinic Name</string>
    <string name="buildingNumberValidation">Enter Building Name</string>
    <string name="doorNumberValidation">Enter Door Number</string>
    <string name="streetNameValidation">Enter Street Name</string>
    <string name="areaNameValidation">Enter Area Name</string>
    <string name="stateValidation">Select State</string>
    <string name="cityValidation">Select City</string>
    <string name="postalCodeValidation">Enter Postal Code</string>
    <string name="validpostalCode">Enter Valid Postal Code</string>
    <string name="landmarkValidation">Enter LandMark </string>
    <string name="consultaionFeeValidation">Enter Consultation Fee</string>
    <string name="clinicAdded">Clinic Added Successfully</string>
    <string name="clinicAddedError">Please try Again</string>
    <string name="clinicUpdated">Clinic Updated Successfully</string>
    <string name="Country">Country</string>
    <string name="State">State</string>
    <string name="City">City</string>
    <string name="passwordValidation">Please enter current password</string>
    <string name="newPasswordValidation">Please enter your new password</string>
    <string name="ValidNewPassword">Please confirm your new password</string>
    <string name="passwordAdded">Password Added Successfully </string>
    <string name="firstNameValidation">Enter First Name</string>
    <string name="middleNameValidation">Enter Middle Name</string>
    <string name="lastNameValidation">Enter Last Name</string>
    <string name="emialIdValidation">Enter Practice Start Date</string>
    <string name="mobileValidation">Enter Country Name</string>
    <string name="practiceValidation">Enter Email ID</string>
    <string name="countryValidation">Enter Mobile Number</string>
    <string name="profileUpdated">Profile Updated Successfully</string>
    <string name="myhome">My Home</string>
    <string name="myorders">My Orders</string>
    <string name="patientrecords">Patient Records</string>
    <string name="hintMobile">Mobile</string>
    <string name="hintDate">DD/MM/YYYY</string>
    <string name="hintTime">HH:MM</string>
</resources>