<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/childDHCode"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hintChildDHCode"
            style = "@style/EditTextStyle"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp">

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:background="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textOR"
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginRight="20dp"
                android:background="@android:color/white"/>

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/childName"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hintChildName"
            style = "@style/EditTextStyle"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_medium"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/male"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/radioButton"
                    android:paddingLeft="5dp"
                    style="@style/radio_button_style"
                    android:checked="true"

                     />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:paddingLeft="5dp"
                    android:textColor="@color/colorWhite"
                    style="@style/radio_button_style"
                    android:textSize="@dimen/text_medium"
                    android:id="@+id/radioButton2" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateOfBirth"
                    android:textColor="@color/colorWhite"
                    android:layout_weight="0" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:id="@+id/dateOfBirth"
                    android:hint="@string/hintDate"
                    android:inputType="date"
                    android:layout_margin="10dp"
                    style = "@style/EditTextStyle"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeOfBirth"
                    android:textColor="@color/colorWhite"
                    android:layout_weight="0" />

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    >

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/edit_text_height"
                        android:id="@+id/timeOfBirth"
                        android:hint="@string/hintTime"
                        android:inputType="time"
                        style = "@style/EditTextStyle"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/time_extension" />

                    <Spinner
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/time_extension"
                        android:background="@drawable/round_rect_fill_white"
                        android:spinnerMode="dropdown"
                        android:popupBackground="@drawable/round_rect_fill_white"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>
            </LinearLayout>



        </LinearLayout>

               <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parent"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/colorWhite"
                android:id="@+id/parentBtn"
                android:paddingLeft="5dp"
                android:checked="true"
                style="@style/radio_button_style"
                android:layout_marginRight="10dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardian"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/colorWhite"
                style="@style/radio_button_style"
                android:paddingLeft="5dp"
                android:id="@+id/gaurdianBtn" />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/consultationName"
            android:hint="@string/hintName"
            style = "@style/EditTextStyle"
            android:allowUndo="false"
            android:layout_marginBottom="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:id="@+id/consultationMobile"
            android:hint="@string/hintMobile"
            android:inputType="phone"
            style = "@style/EditTextStyle"
            android:layout_marginBottom="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:id="@+id/consultationEmail"
            android:hint="@string/hintEmail"
            style = "@style/EditTextStyle"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textAdd"
            android:id="@+id/addConsultationBtn"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            style = "@style/ButtonStyle"/>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>